--- a/Front_htmlcss/Firm/index.html
+++ b/Front_htmlcss/Firm/index.html
@@ -13,12 +13,12 @@
             <h2>Ваше предприятие называется "Шоколадочка"</h2>
             <h2>Баланс фирмы: 228 ШкололоКоинов</h2>
             <h2>Участники фирмы:</h2>
-            <h2>1. 2 номера 9</h2>
-            <h2>2. большой номер 9</h2>
-            <h2>3. номер 6 с экстра соусом</h2>
-            <h2>4. номер 7</h2>
-            <h2>5. два 45, один с сыром</h2>
-            <h2>6. большая содовая</h2>
+            <li>1. 2 номера 9</li>
+            <li>2. большой номер 9</li>
+            <li>3. номер 6 с экстра соусом</li>
+            <li>4. номер 7</li>
+            <li>5. два 45, один с сыром</li>
+            <li>6. большая содовая</li>
         </div>
         <hr>
         <h1>Ваши возможности:</h1>
