--- a/Front_htmlcss/firm.html
+++ b/Front_htmlcss/firm.html
@@ -11,7 +11,7 @@
         <div id="info">
             <h1>Добро пожаловать, фирма "Шоколадочка"</h1>
             <h2>Ваше предприятие называется "Шоколадочка"</h2>
-            <h2>Баланс фирмы: 228 ШкололоКоинов</h2>
+            <h2>Баланс фирмы: 228 талиц</h2>
             <h2>Участники фирмы:</h2>
             <li>1. 2 номера 9</li>
             <li>2. большой номер 9</li>
