--- a/Front_htmlcss/firm.html
+++ b/Front_htmlcss/firm.html
@@ -23,8 +23,9 @@
         <hr>
         <h1>Ваши возможности:</h1>
         <div class="btns"></div>
-            <button onclick="" class="nalogi">Уплата налогов</button><br>
-            <button onclick="" class="perevod">Перевод денег другим игрокам</button><br>
+            <button onclick="nalogi()" class="btn-purple">Уплата налогов</button><br>
+            <button onclick="perevod()" class="btn-purple">Перевод денег другим игрокам</button><br>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
