--- a/Front_htmlcss/player.html
+++ b/Front_htmlcss/player.html
@@ -19,9 +19,12 @@
         <hr>
         <h1>Ваши возможности:</h1>
         <div class="btns"></div>
-            <button onclick="nalogi()" class="nalogi">Уплатить налоги</button><br>
-            <button onclick="perevod()" class="perevod">Перевод денег другому игроку</button><br>
-            <button onclick="uslugi()" class="uslugi">Услуги фирмы</button><br>
+            <button onclick="nalogi()" class="btn-purple">Уплатить налоги</button><br>
+            <button onclick="perevod()" class="btn-purple">Перевод денег другому игроку</button><br>
+            <button onclick="uslugi()" class="btn-purple">Услуги фирмы</button><br>
+            <button onclick="role_verify()" class="btn-orange">Перейти в министерство `ministry_name`</button> 
+            <button onclick="firm_verify()" class="btn-orange">Перейти в фирму `firm_name`</button>
+            <!--Лишь одна кнопка из двух выше: либо перейти в министерство, либо перейти в фирму--> 
         </div>
     </div>
 
