--- a/Front_htmlcss/teacher.html
+++ b/Front_htmlcss/teacher.html
@@ -18,8 +18,10 @@
         <hr>
         <h1>Ваши возможности:</h1>
         <div class="btns"></div>
-            <button onclick="" class="zarplata">Выдача зарплаты</button><br>
-            <button onclick="" class="uslugi">Оплата услуг</button><br>
+            <button onclick="perevod()" class="btn-purple">Выдача зарплаты</button><br>
+            <button onclick="uslugi()" class="btn-purple">Оплата услуг</button><br>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
